[package]
name = "nbchain-cli"
version = "0.1.0"
edition = "2018"

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
env_logger = "0.9.0"
codec = { package = "parity-scale-codec", version = "2", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
sp-core = { package = "sp-core", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
subxt = { package = "subxt", git = "https://github.com/paritytech/subxt", branch = "master" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-literal = {version="0.3.1",default-features = false}


[patch."https://github.com/paritytech/substrate"]
sp-std = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-panic-handler = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-debug-derive = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-storage = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-wasm-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-tracing = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-externalities = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-arithmetic = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-runtime-interface = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-trie = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-keystore = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-state-machine = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-io = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-application-crypto = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-runtime = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
sp-keyring = { git = "https://github.com/paritytech//substrate", branch = "polkadot-v0.9.11" }
